--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <section id="featured-product" class="container">
             <div class="featured-contain display-flex">
                 <div class="featured-img">
-                    <img src="/images/gear.png" alt="">
+                    <img src="./images/gear.png" alt="">
                 </div>
                 <div class="featured-text">
                     <h2 class="featured-title">Featured products at one place</h2>
