anther img issue

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 
                 <div class="img-contain display-flex">
                     <div class="banner-bg">
-                        <img src="/images/main-camera.png" alt="">
+                        <img src="./images/main-camera.png" alt="">
                     </div>
                 </div>
             </div>
