--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
     <link rel="stylesheet" href="style/style.css">
 </head>
+
 <body>
-   <header class="container">
+    <header class="container">
         <!-- ============================
                 navbar start
          ============================ -->
@@ -21,53 +23,59 @@
                 <li class="menu-link"><a href="#" class="menu-links">Products</a></li>
                 <li class="menu-link"><a href="#" class="menu-links">Sing up</a></li>
                 <li class="menu-link"><a href="#" class="menu-links">Log in</a></li>
-                <li class="menu-link"><a href="#" class="menu-links"><i class="fa-solid fa-magnifying-glass"></i></a></li>
+                <li class="menu-link"><a href="#" class="menu-links"><i class="fa-solid fa-magnifying-glass"></i></a>
+                </li>
                 <li class="menu-link"><a href="#" class="menu-links"><i class="fa-solid fa-cart-shopping"></i></a></li>
             </ul>
         </nav>
-         <!-- ============================
+        <!-- ============================
                 navbar end
          ============================ -->
+
+    </header>
+
+    <main>
         <!-- ============================
                 banner start
          ============================ -->
-         <section id="banner" class="">
+        <section id="banner" class="container">
             <div class="banner-contain display-flex">
                 <div class="text-contain">
                     <h1 class="banner-title">Start your Journey as Influencer</h1>
-                    <p class="banner-detail ">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                    <p class="banner-detail ">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum
+                        sed scelerisque eros. Lectus faucibus.</p>
                     <div class="btn">
-                    <button class="primary-btn">Preebook now <i class="fa-solid fa-arrow-right"></i></button>
+                        <button class="primary-btn">Preebook now <i class="fa-solid fa-arrow-right"></i></button>
+                    </div>
                 </div>
-                </div>
-                
+
                 <div class="img-contain display-flex">
                     <div class="banner-bg">
                         <img src="./images/main-camera.png" alt="">
                     </div>
                 </div>
             </div>
-         </section>               
-         <!-- ============================
+        </section>
+        <!-- ============================
                 banner end
          ============================ -->
-   </header>
 
-   <main>
-    <!-- ============================
+
+        <!-- ============================
                 company name start
          ============================ -->
         <section id="company-name" class="container">
-            <div class="company-icon display-flex">
+            <div class="company-icon">
                 <img src="logos/Alibaba.svg" alt="">
                 <img src="logos/Amazon.svg" alt="">
+                <img src="logos/Daraz.pk Logo.svg" alt="">
                 <img src="logos/Ebay.svg" alt="">
                 <img src="logos/Rakuten.svg" alt="">
                 <img src="logos/Walmart.svg" alt="">
                 <img src="logos/Target.svg" alt="">
             </div>
-        </section>                
-         <!-- ============================
+        </section>
+        <!-- ============================
                 company name end
          ============================ -->
         <!-- ============================
@@ -147,13 +155,13 @@
                     <p class="card-delivary">Wordwide shifting</p>
                     <p class="storg">available</p>
                     <p class="Buyers">protection possible!</p>
-                </div>                
+                </div>
             </div>
             <div class="see-more">
                 <p>See More <i class="fa-solid fa-arrow-right"></i></p>
             </div>
-        </section>                
-         <!-- ============================
+        </section>
+        <!-- ============================
                 popular collection end
          ============================ -->
         <!-- ============================
@@ -166,40 +174,43 @@
                 </div>
                 <div class="featured-text">
                     <h2 class="featured-title">Featured products at one place</h2>
-                    <p class="featured-detail">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    <p class="featured-detail">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+                        Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                    </p>
                     <div class="btn">
                         <button class="secondary-btn">Join Now <i class="fa-solid fa-arrow-right"></i></button>
                     </div>
                 </div>
             </div>
-        </section>                
-         <!-- ============================
+        </section>
+        <!-- ============================
                 Featured Products end
          ============================ -->
-   </main>
+    </main>
 
     <!-- ============================
                 footer start
          ============================ -->
-        <footer>
-            <div class="container">
-                <div class="footer-contain">
-                    <h3 class="footer-title">Influencer products</h3>
-                    <p class="copyright">Copyright © 2020  influencer products</p>
-                    <p class="all-right">All rights reserved</p>
+    <footer>
+        <div class="container">
+            <div class="footer-contain">
+                <h3 class="footer-title">Influencer products</h3>
+                <p class="copyright">Copyright © 2020 influencer products</p>
+                <p class="all-right">All rights reserved</p>
 
-                    <ul class="social display-flex">
-                        <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                        <li><a href="#"><i class="fa-solid fa-globe"></i></a></li>
-                        <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
-                    </ul>
-                </div>
+                <ul class="social display-flex">
+                    <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fa-solid fa-globe"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+                </ul>
             </div>
-        </footer>                
-         <!-- ============================
+        </div>
+    </footer>
+    <!-- ============================
                 footer end
          ============================ -->
-   
+
 </body>
+
 </html>
